--- a/translations/help.txt
+++ b/translations/help.txt
@@ -1,5 +1,5 @@
 # to generate the translations:
-1: Run lupdate *.pro to create the .ts file.
+1: Run "lupdate -recursive . -ts translations/en_US.ts" to create the .ts file.
 2: Make your translations in Qt Linguist and save the .ts file.
 3: In Qt Linguist menu, click in File -> Release As to compile the .ts file to a .qm file.
 4: Copy the .qm file to this correct location.
